radar_plot finished

--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -5897,7 +5897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -5908,7 +5908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -5934,7 +5934,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cocoa_percent</th>\n",
+       "      <th>cocoa_level</th>\n",
        "      <th>rating</th>\n",
        "      <th>counts_of_ingredients</th>\n",
        "      <th>count_tastes</th>\n",
@@ -5952,7 +5952,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>5150</th>\n",
-       "      <td>76.00</td>\n",
+       "      <td>3.80</td>\n",
        "      <td>3.50</td>\n",
        "      <td>3.00</td>\n",
        "      <td>3.00</td>\n",
@@ -5960,7 +5960,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A. Morin</th>\n",
-       "      <td>68.88</td>\n",
+       "      <td>3.44</td>\n",
        "      <td>3.40</td>\n",
        "      <td>3.96</td>\n",
        "      <td>2.88</td>\n",
@@ -5968,7 +5968,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AMMA</th>\n",
-       "      <td>69.00</td>\n",
+       "      <td>3.45</td>\n",
        "      <td>3.50</td>\n",
        "      <td>4.00</td>\n",
        "      <td>3.40</td>\n",
@@ -5976,7 +5976,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Acalli</th>\n",
-       "      <td>71.00</td>\n",
+       "      <td>3.55</td>\n",
        "      <td>3.56</td>\n",
        "      <td>2.00</td>\n",
        "      <td>2.75</td>\n",
@@ -5984,7 +5984,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Adi aka Fijiana (Easy In Ltd)</th>\n",
-       "      <td>75.00</td>\n",
+       "      <td>3.75</td>\n",
        "      <td>3.25</td>\n",
        "      <td>3.00</td>\n",
        "      <td>1.75</td>\n",
@@ -6000,7 +6000,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Zotter</th>\n",
-       "      <td>70.35</td>\n",
+       "      <td>3.52</td>\n",
        "      <td>3.35</td>\n",
        "      <td>3.82</td>\n",
        "      <td>2.88</td>\n",
@@ -6008,7 +6008,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hello cocoa</th>\n",
-       "      <td>65.50</td>\n",
+       "      <td>3.28</td>\n",
        "      <td>3.12</td>\n",
        "      <td>3.00</td>\n",
        "      <td>3.00</td>\n",
@@ -6016,7 +6016,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hexx</th>\n",
-       "      <td>71.50</td>\n",
+       "      <td>3.58</td>\n",
        "      <td>2.92</td>\n",
        "      <td>2.00</td>\n",
        "      <td>2.90</td>\n",
@@ -6024,7 +6024,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>organicfair</th>\n",
-       "      <td>72.17</td>\n",
+       "      <td>3.61</td>\n",
        "      <td>2.88</td>\n",
        "      <td>3.00</td>\n",
        "      <td>3.00</td>\n",
@@ -6032,7 +6032,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>twenty-four blackbirds</th>\n",
-       "      <td>73.71</td>\n",
+       "      <td>3.69</td>\n",
        "      <td>3.07</td>\n",
        "      <td>2.00</td>\n",
        "      <td>2.86</td>\n",
@@ -6044,19 +6044,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                               cocoa_percent  rating  counts_of_ingredients  \\\n",
-       "company                                                                       \n",
-       "5150                                   76.00    3.50                   3.00   \n",
-       "A. Morin                               68.88    3.40                   3.96   \n",
-       "AMMA                                   69.00    3.50                   4.00   \n",
-       "Acalli                                 71.00    3.56                   2.00   \n",
-       "Adi aka Fijiana (Easy In Ltd)          75.00    3.25                   3.00   \n",
-       "...                                      ...     ...                    ...   \n",
-       "Zotter                                 70.35    3.35                   3.82   \n",
-       "hello cocoa                            65.50    3.12                   3.00   \n",
-       "hexx                                   71.50    2.92                   2.00   \n",
-       "organicfair                            72.17    2.88                   3.00   \n",
-       "twenty-four blackbirds                 73.71    3.07                   2.00   \n",
+       "                               cocoa_level  rating  counts_of_ingredients  \\\n",
+       "company                                                                     \n",
+       "5150                                  3.80    3.50                   3.00   \n",
+       "A. Morin                              3.44    3.40                   3.96   \n",
+       "AMMA                                  3.45    3.50                   4.00   \n",
+       "Acalli                                3.55    3.56                   2.00   \n",
+       "Adi aka Fijiana (Easy In Ltd)         3.75    3.25                   3.00   \n",
+       "...                                    ...     ...                    ...   \n",
+       "Zotter                                3.52    3.35                   3.82   \n",
+       "hello cocoa                           3.28    3.12                   3.00   \n",
+       "hexx                                  3.58    2.92                   2.00   \n",
+       "organicfair                           3.61    2.88                   3.00   \n",
+       "twenty-four blackbirds                3.69    3.07                   2.00   \n",
        "\n",
        "                               count_tastes                   company_name  \n",
        "company                                                                     \n",
@@ -6075,42 +6075,50 @@
        "[488 rows x 5 columns]"
       ]
      },
-     "execution_count": 124,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "radar = pd.DataFrame(round(test_taste.groupby(by = 'company')[feat_radar].mean(),2))\n",
     "radar['company_name'] = radar.index\n",
-    "radar['cocoa_percent'] = radar['cocoa_percent']\n",
+    "radar.insert(0, 'cocoa_level', round((5 * radar['cocoa_percent']) / 100, 2))\n",
+    "radar.drop(columns = {'cocoa_percent'}, inplace = True)\n",
     "radar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "company1 = '5150'\n",
+    "feat_radar = ['cocoa_level', 'rating', 'counts_of_ingredients', 'count_tastes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company1 = 'Zotter'\n",
     "company2 = 'A. Morin'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.76, 3.5, 3.0, 3.0]"
+       "[3.52, 3.35, 3.82, 2.88]"
       ]
      },
-     "execution_count": 114,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -6125,18 +6133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.6888, 3.4, 3.96, 2.88]"
+       "[3.44, 3.4, 3.96, 2.88]"
       ]
      },
-     "execution_count": 115,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -6151,7 +6158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -6167,18 +6174,24 @@
          "fill": "toself",
          "hoverinfo": "text",
          "marker": {
-          "color": "rgb(45,0,198)"
+          "color": "rgb(205,102,29)"
          },
-         "name": "5150",
+         "name": "Zotter",
          "opacity": 1,
          "r": [
-          0.76,
-          3.5,
-          3,
-          3
+          3.52,
+          3.35,
+          3.82,
+          2.88
+         ],
+         "text": [
+          "cocoa_level = 3.52",
+          "rating = 3.35",
+          "counts_of_ingredients = 3.82",
+          "count_tastes = 2.88"
          ],
          "theta": [
-          "cocoa_percent",
+          "cocoa_level",
           "rating",
           "counts_of_ingredients",
           "count_tastes"
@@ -6189,17 +6202,23 @@
          "fill": "toself",
          "hoverinfo": "text",
          "marker": {
-          "color": "rgb(255,171,0)"
+          "color": "rgb(193,255,193)"
          },
          "name": "A. Morin",
          "r": [
-          0.6888,
+          3.44,
           3.4,
           3.96,
           2.88
          ],
+         "text": [
+          "cocoa_level = 3.44",
+          "rating = 3.4",
+          "counts_of_ingredients = 3.96",
+          "count_tastes = 2.88"
+         ],
          "theta": [
-          "cocoa_percent",
+          "cocoa_level",
           "rating",
           "counts_of_ingredients",
           "count_tastes"
@@ -6208,6 +6227,8 @@
         }
        ],
        "layout": {
+        "paper_bgcolor": "rgba(0,0,0,0)",
+        "plot_bgcolor": "rgba(0,0,0,0)",
         "polar": {
          "radialaxis": {
           "range": [
@@ -6217,7 +6238,7 @@
           "visible": true
          }
         },
-        "showlegend": false,
+        "showlegend": true,
         "template": {
          "data": {
           "bar": [
@@ -7048,20 +7069,22 @@
     "        r=company1_list,\n",
     "        theta=feat_radar,\n",
     "        fill='toself', \n",
-    "        marker_color = 'rgb(45,0,198)',   \n",
+    "        marker_color = 'rgb(205,102,29)',   \n",
     "        opacity =1, \n",
     "        hoverinfo = \"text\" ,\n",
-    "        name = company1\n",
-    "        #text  = [company1_df.index[i] +' = ' + str(company1_df['total'][i]) for i in range(len(company1_df))]\n",
-    "    ))\n",
+    "        name = company1,\n",
+    "        text  = [company1_df.columns[i] + ' = ' + str(company1_df.iloc[0,i]) for i in range(len(company1_list))]\n",
+    "    ), layout = Layout(\n",
+    "    paper_bgcolor='rgba(0,0,0,0)',\n",
+    "    plot_bgcolor='rgba(0,0,0,0)'))\n",
     "fig.add_trace(go.Scatterpolar(\n",
     "        r=company2_list,\n",
     "        theta=feat_radar,\n",
     "        fill='toself',\n",
-    "        marker_color = 'rgb(255,171,0)',\n",
+    "        marker_color = 'rgb(193,255,193)',\n",
     "        hoverinfo = \"text\" ,\n",
     "        name= company2,\n",
-    "        #text  = [radar.columns()[i] +' = ' + str(radar['total'][i]) for i in range(len(company2_df))]\n",
+    "        text  = [company2_df.columns[i] + ' = ' + str(company2_df.iloc[0,i]) for i in range(len(company2_list))]\n",
     "        ))\n",
     "\n",
     "fig.update_layout(\n",
@@ -7070,10 +7093,192 @@
     "      visible=True,\n",
     "      range=[0, 5]\n",
     "    )),\n",
-    "  showlegend=False\n",
+    "  showlegend=True\n",
     ")\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "companies = list(data['company'].unique())\n",
+    "#companies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# The app itself\n",
+    "\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    \n",
+    "    html.H4('Choose the companies you want to compare'),\n",
+    "        \n",
+    "        html.Div([\n",
+    "                      \n",
+    "            html.Div([\n",
+    "                html.Label('Company 1'),\n",
+    "                    dcc.Dropdown(\n",
+    "                                    id='drop_comp1_id',\n",
+    "                                    options=companies,\n",
+    "                                    value=['5150'],\n",
+    "                                    multi=False\n",
+    "                                ),\n",
+    "            ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'}),\n",
+    "            \n",
+    "            html.Div([\n",
+    "                html.Label('Company 2'),\n",
+    "                    dcc.Dropdown(\n",
+    "                                    id='drop_comp2_id',\n",
+    "                                    options=companies,\n",
+    "                                    value=['A. Morin'],\n",
+    "                                    multi=False\n",
+    "                                ),\n",
+    "            ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'})]),\n",
+    "                                \n",
+    "            \n",
+    "            \n",
+    "            html.Div([\n",
+    "                html.Div([\n",
+    "                    html.Label('Results', style={'font-size': 'medium'}),\n",
+    "                    html.Br(),\n",
+    "                    html.Br(),\n",
+    " \n",
+    "                html.Div([ \n",
+    "                    html.Div([\n",
+    "                        \n",
+    "                        html.Div([\n",
+    "                            html.Br(),\n",
+    "                            html.Label(id='title_map', style={'font-size':'medium'}), \n",
+    "                            html.Br(),\n",
+    "                        ], style={'width': '70%'}),\n",
+    "                        html.Div([\n",
+    "\n",
+    "                        ], style={'width': '5%'}),\n",
+    "                       \n",
+    "                    \n",
+    "                    dcc.Graph(id='radar'),\n",
+    "\n",
+    "                ], className='box', style={'padding-bottom': '0px'}), \n",
+    "                    ]),\n",
+    "                ], style={'width': '60%'}),           \n",
+    "            ], className='row')\n",
+    "])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: on\n"
+     ]
+    }
+   ],
+   "source": [
+    "@app.callback(\n",
+    "   \n",
+    "   [Output('radar', 'figure')],\n",
+    "   \n",
+    "    [Input('drop_comp1_id', 'value'),\n",
+    "     Input('drop_comp2_id','value')] )\n",
+    "\n",
+    "def update_radar(company1,company2):\n",
+    "\n",
+    "    feat_radar = ['cocoa_percent', 'rating', 'counts_of_ingredients', 'count_tastes']\n",
+    "\n",
+    "    radar = pd.DataFrame(round(test_taste.groupby(by = 'company')[feat_radar].mean(),2))\n",
+    "    radar['company_name'] = radar.index\n",
+    "    radar.insert(0, 'cocoa_level', round((5 * radar['cocoa_percent']) / 100, 2))\n",
+    "    radar.drop(columns = {'cocoa_percent'}, inplace = True)\n",
+    "    \n",
+    "    feat_radar = ['cocoa_level', 'rating', 'counts_of_ingredients', 'count_tastes']\n",
+    "\n",
+    "    company1_list = []\n",
+    "\n",
+    "    company1_df = pd.DataFrame(radar[radar['company_name'] == company1])\n",
+    "    for i in range(len(radar.columns)-1):\n",
+    "        company1_list.append(radar[radar['company_name'] == company1].iloc[0,i])\n",
+    "\n",
+    "    company2_list = []\n",
+    "\n",
+    "    company2_df = pd.DataFrame(radar[radar['company_name'] == company2])\n",
+    "    for i in range(len(radar.columns)-1):\n",
+    "        company2_list.append(radar[radar['company_name'] == company2].iloc[0,i])\n",
+    "\n",
+    "\n",
+    "    fig = go.Figure(data=go.Scatterpolar(\n",
+    "            r=company1_list,\n",
+    "            theta=feat_radar,\n",
+    "            fill='toself', \n",
+    "            marker_color = 'rgb(205,102,29)',   \n",
+    "            opacity =1, \n",
+    "            hoverinfo = \"text\" ,\n",
+    "            name = company1,\n",
+    "            text  = [company1_df.columns[i] + ' = ' + str(company1_df.iloc[0,i]) for i in range(len(company1_list))]\n",
+    "        ), layout = Layout(\n",
+    "        paper_bgcolor='rgba(0,0,0,0)',\n",
+    "        plot_bgcolor='rgba(0,0,0,0)'))\n",
+    "    fig.add_trace(go.Scatterpolar(\n",
+    "            r=company2_list,\n",
+    "            theta=feat_radar,\n",
+    "            fill='toself',\n",
+    "            marker_color = 'rgb(193,255,193)',\n",
+    "            hoverinfo = \"text\" ,\n",
+    "            name= company2,\n",
+    "            text  = [company2_df.columns[i] + ' = ' + str(company2_df.iloc[0,i]) for i in range(len(company2_list))]\n",
+    "            ))\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "    polar=dict(\n",
+    "        radialaxis=dict(\n",
+    "        visible=True,\n",
+    "        range=[0, 5]\n",
+    "        )),\n",
+    "    showlegend=True\n",
+    "    )\n",
+    "\n",
+    "    return fig\n",
+    "    # ----------------------------------------------------------------------\n",
+    "\n",
+    "    # if filtered.empty:\n",
+    "    #     name_company = 'No company was found'\n",
+    "    #     rating = 'No rating was found'\n",
+    "    #     country= 'No country was found'\n",
+    "        \n",
+    "    # else:\n",
+    "    #     name_company=str(filtered.head(1)['company'].values[0])\n",
+    "    #     rating=str(filtered.head(1)['rating'].values[0])\n",
+    "    #     country=str(filtered.head(1)['company_location'].values[0])\n",
+    "    \n",
+    "    # return name_company ,  \\\n",
+    "    #        rating , \\\n",
+    "    #        country , \\\n",
+    "    #        fig\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True, use_reloader=False)"
    ]
   },
   {
@@ -11939,7 +12144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
