--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -17,6 +17,7 @@
     "import plotly.express as px\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objs as go\n",
+    "from plotly.graph_objs import *\n",
     "from plotly.offline import plot\n",
     "import random\n",
     "\n",
