--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -7203,7 +7203,7 @@
     "                    dcc.Dropdown(\n",
     "                                    id='drop_comp1_id',\n",
     "                                    options=companies,\n",
-    "                                    value=['5150'],\n",
+    "                                    value='5150',\n",
     "                                    multi=False\n",
     "                                ),\n",
     "            ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'}),\n",
@@ -7213,7 +7213,7 @@
     "                    dcc.Dropdown(\n",
     "                                    id='drop_comp2_id',\n",
     "                                    options=companies,\n",
-    "                                    value=['A. Morin'],\n",
+    "                                    value='A. Morin',\n",
     "                                    multi=False\n",
     "                                ),\n",
     "            ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'})]),\n",
