--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -6231,6 +6231,26 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cocoa_level', 'rating', 'counts_of_ingredients', 'count_tastes']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat_radar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "scrolled": false
    },
@@ -6263,10 +6283,10 @@
           "count_tastes = 3.0"
          ],
          "theta": [
-          "cocoa_level",
-          "rating",
-          "counts_of_ingredients",
-          "count_tastes"
+          "Level of Cocoa",
+          "Rating",
+          "Number of Ingredients",
+          "Number of Tastes"
          ],
          "type": "scatterpolar"
         },
@@ -6290,10 +6310,10 @@
           "count_tastes = 2.88"
          ],
          "theta": [
-          "cocoa_level",
-          "rating",
-          "counts_of_ingredients",
-          "count_tastes"
+          "Level of Cocoa",
+          "Rating",
+          "Number of Ingredients",
+          "Number of Tastes"
          ],
          "type": "scatterpolar"
         }
@@ -7139,7 +7159,7 @@
     "\n",
     "fig = go.Figure(data=go.Scatterpolar(\n",
     "        r=company1_list,\n",
-    "        theta=feat_radar,\n",
+    "        theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
     "        fill='toself', \n",
     "        marker_color = 'rgb(205,102,29)',   \n",
     "        opacity =1, \n",
@@ -7151,7 +7171,7 @@
     "    plot_bgcolor='rgba(0,0,0,0)'))\n",
     "fig.add_trace(go.Scatterpolar(\n",
     "        r=company2_list,\n",
-    "        theta=feat_radar,\n",
+    "        theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
     "        fill='toself',\n",
     "        marker_color = 'rgb(193,255,193)',\n",
     "        hoverinfo = \"text\" ,\n",
@@ -7288,7 +7308,7 @@
     "\n",
     "    fig = go.Figure(data=go.Scatterpolar(\n",
     "            r=company1_list,\n",
-    "            theta=feat_radar,\n",
+    "            theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
     "            fill='toself', \n",
     "            marker_color = 'rgb(205,102,29)',   \n",
     "            opacity =1, \n",
@@ -7300,7 +7320,7 @@
     "        plot_bgcolor='rgba(0,0,0,0)'))\n",
     "    fig.add_trace(go.Scatterpolar(\n",
     "            r=company2_list,\n",
-    "            theta=feat_radar,\n",
+    "            theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
     "            fill='toself',\n",
     "            marker_color = 'rgb(193,255,193)',\n",
     "            hoverinfo = \"text\" ,\n",
