--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -41412,64 +41412,64 @@
    "outputs": [],
    "source": [
     "\n",
-    "# The app itself\n",
+    "# # The app itself\n",
     "\n",
-    "app = dash.Dash(__name__)\n",
+    "# app = dash.Dash(__name__)\n",
     "\n",
-    "app.layout = html.Div([\n",
+    "# app.layout = html.Div([\n",
     "    \n",
-    "    html.H4('Choose the companies you want to compare'),\n",
+    "#     html.H4('Choose the companies you want to compare'),\n",
     "        \n",
-    "        html.Div([\n",
+    "#         html.Div([\n",
     "                      \n",
-    "            html.Div([\n",
-    "                html.Label('Company 1'),\n",
-    "                    dcc.Dropdown(\n",
-    "                                    id='drop_comp1_id',\n",
-    "                                    options=companies,\n",
-    "                                    value='5150',\n",
-    "                                    multi=False\n",
-    "                                ),\n",
-    "            ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'}),\n",
+    "#             html.Div([\n",
+    "#                 html.Label('Company 1'),\n",
+    "#                     dcc.Dropdown(\n",
+    "#                                     id='drop_comp1_id',\n",
+    "#                                     options=companies,\n",
+    "#                                     value='5150',\n",
+    "#                                     multi=False\n",
+    "#                                 ),\n",
+    "#             ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'}),\n",
     "            \n",
-    "            html.Div([\n",
-    "                html.Label('Company 2'),\n",
-    "                    dcc.Dropdown(\n",
-    "                                    id='drop_comp2_id',\n",
-    "                                    options=companies,\n",
-    "                                    value='A. Morin',\n",
-    "                                    multi=False\n",
-    "                                ),\n",
-    "            ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'})]),\n",
+    "#             html.Div([\n",
+    "#                 html.Label('Company 2'),\n",
+    "#                     dcc.Dropdown(\n",
+    "#                                     id='drop_comp2_id',\n",
+    "#                                     options=companies,\n",
+    "#                                     value='A. Morin',\n",
+    "#                                     multi=False\n",
+    "#                                 ),\n",
+    "#             ], className='box', style={'margin': '10px', 'padding-top':'15px', 'padding-bottom':'15px'})]),\n",
     "                                \n",
     "            \n",
     "            \n",
-    "            html.Div([\n",
-    "                html.Div([\n",
-    "                    html.Label('Results', style={'font-size': 'medium'}),\n",
-    "                    html.Br(),\n",
-    "                    html.Br(),\n",
+    "#             html.Div([\n",
+    "#                 html.Div([\n",
+    "#                     html.Label('Results', style={'font-size': 'medium'}),\n",
+    "#                     html.Br(),\n",
+    "#                     html.Br(),\n",
     " \n",
-    "                html.Div([ \n",
-    "                    html.Div([\n",
+    "#                 html.Div([ \n",
+    "#                     html.Div([\n",
     "                        \n",
-    "                        html.Div([\n",
-    "                            html.Br(),\n",
-    "                            html.Label(id='title_map', style={'font-size':'medium'}), \n",
-    "                            html.Br(),\n",
-    "                        ], style={'width': '70%'}),\n",
-    "                        html.Div([\n",
+    "#                         html.Div([\n",
+    "#                             html.Br(),\n",
+    "#                             html.Label(id='title_map', style={'font-size':'medium'}), \n",
+    "#                             html.Br(),\n",
+    "#                         ], style={'width': '70%'}),\n",
+    "#                         html.Div([\n",
     "\n",
-    "                        ], style={'width': '5%'}),\n",
+    "#                         ], style={'width': '5%'}),\n",
     "                       \n",
     "                    \n",
-    "                    dcc.Graph(id='radar'),\n",
+    "#                     dcc.Graph(id='radar'),\n",
     "\n",
-    "                ], className='box', style={'padding-bottom': '0px'}), \n",
-    "                    ]),\n",
-    "                ], style={'width': '60%'}),           \n",
-    "            ], className='row')\n",
-    "])\n",
+    "#                 ], className='box', style={'padding-bottom': '0px'}), \n",
+    "#                     ]),\n",
+    "#                 ], style={'width': '60%'}),           \n",
+    "#             ], className='row')\n",
+    "# ])\n",
     "    "
    ]
   },
@@ -41479,85 +41479,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@app.callback(\n",
+    "# @app.callback(\n",
     "   \n",
-    "   Output('radar', 'figure'),\n",
+    "#    Output('radar', 'figure'),\n",
     "   \n",
-    "    [Input('drop_comp1_id', 'value'),\n",
-    "     Input('drop_comp2_id','value')] )\n",
+    "#     [Input('drop_comp1_id', 'value'),\n",
+    "#      Input('drop_comp2_id','value')] )\n",
     "\n",
-    "def update_radar(company1,company2):\n",
+    "# def update_radar(company1,company2):\n",
     "\n",
-    "    feat_radar = ['cocoa_percent', 'rating', 'counts_of_ingredients', 'count_tastes']\n",
+    "#     feat_radar = ['cocoa_percent', 'rating', 'counts_of_ingredients', 'count_tastes']\n",
     "\n",
-    "    radar = pd.DataFrame(round(test_taste.groupby(by = 'company')[feat_radar].mean(),2))\n",
-    "    radar['company_name'] = radar.index\n",
-    "    radar.insert(0, 'cocoa_level', round((5 * radar['cocoa_percent']) / 100, 2))\n",
-    "    radar.drop(columns = {'cocoa_percent'}, inplace = True)\n",
+    "#     radar = pd.DataFrame(round(test_taste.groupby(by = 'company')[feat_radar].mean(),2))\n",
+    "#     radar['company_name'] = radar.index\n",
+    "#     radar.insert(0, 'cocoa_level', round((5 * radar['cocoa_percent']) / 100, 2))\n",
+    "#     radar.drop(columns = {'cocoa_percent'}, inplace = True)\n",
     "    \n",
-    "    feat_radar = ['cocoa_level', 'rating', 'counts_of_ingredients', 'count_tastes']\n",
+    "#     feat_radar = ['cocoa_level', 'rating', 'counts_of_ingredients', 'count_tastes']\n",
     "\n",
-    "    company1_list = []\n",
+    "#     company1_list = []\n",
     "\n",
-    "    company1_df = pd.DataFrame(radar[radar['company_name'] == company1])\n",
-    "    for i in range(len(radar.columns)-1):\n",
-    "        company1_list.append(radar[radar['company_name'] == company1].iloc[0,i])\n",
+    "#     company1_df = pd.DataFrame(radar[radar['company_name'] == company1])\n",
+    "#     for i in range(len(radar.columns)-1):\n",
+    "#         company1_list.append(radar[radar['company_name'] == company1].iloc[0,i])\n",
     "\n",
-    "    company2_list = []\n",
+    "#     company2_list = []\n",
     "\n",
-    "    company2_df = pd.DataFrame(radar[radar['company_name'] == company2])\n",
-    "    for i in range(len(radar.columns)-1):\n",
-    "        company2_list.append(radar[radar['company_name'] == company2].iloc[0,i])\n",
+    "#     company2_df = pd.DataFrame(radar[radar['company_name'] == company2])\n",
+    "#     for i in range(len(radar.columns)-1):\n",
+    "#         company2_list.append(radar[radar['company_name'] == company2].iloc[0,i])\n",
     "\n",
     "\n",
-    "    fig = go.Figure(data=go.Scatterpolar(\n",
-    "            r=company1_list,\n",
-    "            theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
-    "            fill='toself', \n",
-    "            marker_color = 'rgb(205,102,29)',   \n",
-    "            opacity =1, \n",
-    "            hoverinfo = \"text\" ,\n",
-    "            name = company1,\n",
-    "            text  = [company1_df.columns[i] + ' = ' + str(company1_df.iloc[0,i]) for i in range(len(company1_list))]\n",
-    "        ), layout = Layout(\n",
-    "        paper_bgcolor='rgba(0,0,0,0)',\n",
-    "        plot_bgcolor='rgba(0,0,0,0)'))\n",
-    "    fig.add_trace(go.Scatterpolar(\n",
-    "            r=company2_list,\n",
-    "            theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
-    "            fill='toself',\n",
-    "            marker_color = 'rgb(193,255,193)',\n",
-    "            hoverinfo = \"text\" ,\n",
-    "            name= company2,\n",
-    "            text  = [company2_df.columns[i] + ' = ' + str(company2_df.iloc[0,i]) for i in range(len(company2_list))]\n",
-    "            ))\n",
+    "#     fig = go.Figure(data=go.Scatterpolar(\n",
+    "#             r=company1_list,\n",
+    "#             theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
+    "#             fill='toself', \n",
+    "#             marker_color = 'rgb(205,102,29)',   \n",
+    "#             opacity =1, \n",
+    "#             hoverinfo = \"text\" ,\n",
+    "#             name = company1,\n",
+    "#             text  = [company1_df.columns[i] + ' = ' + str(company1_df.iloc[0,i]) for i in range(len(company1_list))]\n",
+    "#         ), layout = Layout(\n",
+    "#         paper_bgcolor='rgba(0,0,0,0)',\n",
+    "#         plot_bgcolor='rgba(0,0,0,0)'))\n",
+    "#     fig.add_trace(go.Scatterpolar(\n",
+    "#             r=company2_list,\n",
+    "#             theta=['Level of Cocoa', 'Rating', 'Number of Ingredients', 'Number of Tastes'],\n",
+    "#             fill='toself',\n",
+    "#             marker_color = 'rgb(193,255,193)',\n",
+    "#             hoverinfo = \"text\" ,\n",
+    "#             name= company2,\n",
+    "#             text  = [company2_df.columns[i] + ' = ' + str(company2_df.iloc[0,i]) for i in range(len(company2_list))]\n",
+    "#             ))\n",
     "\n",
-    "    fig.update_layout(\n",
-    "    polar=dict(\n",
-    "        radialaxis=dict(\n",
-    "        visible=True,\n",
-    "        range=[0, 5]\n",
-    "        )),\n",
-    "    showlegend=True\n",
-    "    )\n",
+    "#     fig.update_layout(\n",
+    "#     polar=dict(\n",
+    "#         radialaxis=dict(\n",
+    "#         visible=True,\n",
+    "#         range=[0, 5]\n",
+    "#         )),\n",
+    "#     showlegend=True\n",
+    "#     )\n",
     "\n",
-    "    return fig\n",
-    "    # ----------------------------------------------------------------------\n",
+    "#     return fig\n",
+    "#     # ----------------------------------------------------------------------\n",
     "\n",
-    "    # if filtered.empty:\n",
-    "    #     name_company = 'No company was found'\n",
-    "    #     rating = 'No rating was found'\n",
-    "    #     country= 'No country was found'\n",
+    "#     # if filtered.empty:\n",
+    "#     #     name_company = 'No company was found'\n",
+    "#     #     rating = 'No rating was found'\n",
+    "#     #     country= 'No country was found'\n",
     "        \n",
-    "    # else:\n",
-    "    #     name_company=str(filtered.head(1)['company'].values[0])\n",
-    "    #     rating=str(filtered.head(1)['rating'].values[0])\n",
-    "    #     country=str(filtered.head(1)['company_location'].values[0])\n",
+    "#     # else:\n",
+    "#     #     name_company=str(filtered.head(1)['company'].values[0])\n",
+    "#     #     rating=str(filtered.head(1)['rating'].values[0])\n",
+    "#     #     country=str(filtered.head(1)['company_location'].values[0])\n",
     "    \n",
-    "    # return name_company ,  \\\n",
-    "    #        rating , \\\n",
-    "    #        country , \\\n",
-    "    #        fig\n",
+    "#     # return name_company ,  \\\n",
+    "#     #        rating , \\\n",
+    "#     #        country , \\\n",
+    "#     #        fig\n",
     "\n"
    ]
   },
@@ -45954,7 +45954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
